# homework

aiohttp/hw_aio/: .env  .env-template  README.md  advt_client.py  pyproject.toml  setup.py
aiohttp/hw_aio/aioapp_advert/: config.py  db_util.py  main.py  model.py  routes.py  schema.py  views.py
aiohttp/hw_aio/app/: advert.py  app.py  config.py  db_util.py  http_errors.py  model.py  routes.py  schema.py  security.py  users.py  views.py
aiohttp/hw_aio/tests/: test_main.py
asyncio/: pyproject.toml
asyncio/swapi/: models.py  swapi_people.py  swapy2.py
flask/hw-flask/: .env  Docker-compose.yml  advt_client.py  pyproject.toml
flask/hw-flask/hw_flask/: advert.py  advt_client.py  app.py  config.py  http_errors.py  model.py  schema.py  users.py
