[tool.poetry]
name = "swapi"
version = "0.1.0"
description = ""
authors = ["Andrey Shishov <a.5920311@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
aiohttp = "^3.8.4"
sqlalchemy = "1.4.46"
psycopg2-binary = "^2.9.5"
more-itertools = "^9.0.0"
aiopg = "^1.4.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
