[tool.poetry]
name = "hw_aio"
version = "0.1.0"
description = ""
authors = ["Andrey Shishov <a.5920311@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^1.10.4"
sqlalchemy = "^2.0.2"
psycopg2-binary = "^2.9.5"
environs = "^9.5.0"
pytest = "^7.2.1"
coverage = "^7.2.1"
aiohttp = "^3.8.4"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
aiohttp-session = "^2.12.0"
cryptography = "^39.0.2"
aiohttp-security = {extras = ["session"], version = "^0.4.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
